Fix height on mobile

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -621,13 +621,11 @@ blockquote footer {
   padding: 1.5rem 0;
 }
 
-
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
   gap: 1rem;
 }
-
 
 .text-center {
   text-align: center;
@@ -643,28 +641,27 @@ figure {
 }
 figcaption {
   line-height: 1.2;
-  word-break: break-all;
 }
 figure a {
   text-decoration-color: transparent;
+  word-break: break-all;
 }
-
 figure:target {
   background-color: rgb(from var(--color-link) r g b / 5%);
   scroll-margin: 5vh;
 }
+@media (min-width: 500px) {
+  .image {
+    flex-grow: 1;
+    aspect-ratio: 1 / 1;
+    width: 100%;
 
-.image {
-  flex-grow: 1;
-  aspect-ratio: 1 / 1;
-  width: 100%;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
-
-
-.monospace {
-
+.image img {
+  min-width: 32px;
+  height: auto;
 }
